# English-Learning-Agent

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
scripts/: all.sh  lint.sh
src/: agent.py  app.py  config.py  transcription.py  tts.py  utils.py
src/middlewares/: measure_time.py
src/routes/: agent_routes.py  index.py  tts_routes.py  websocket.py
src/static/: index.html
